@@ -31,6 +31,7 @@ lib/Psh2/Builtins/Jobs.pm
 lib/Psh2/Builtins/Kill.pm
 lib/Psh2/Builtins/Modules.pm
 lib/Psh2/Builtins/Package.pm
+lib/Psh2/Builtins/Push.pm
 lib/Psh2/Builtins/Printenv.pm
 lib/Psh2/Builtins/Rehash.pm
 lib/Psh2/Builtins/Rename.pm
@@ -41,6 +42,7 @@ lib/Psh2/Builtins/Sub.pm
 lib/Psh2/Builtins/Symbols.pm
 lib/Psh2/Builtins/True.pm
 lib/Psh2/Builtins/Unalias.pm
+lib/Psh2/Builtins/Unshift.pm
 lib/Psh2/Builtins/Use.pm
 lib/Psh2/Builtins/Which.pm
 lib/Psh2/Frontend/Editline.pm
