@@ -1,5 +1,9 @@
 2004-01-28  Markus Peter  <warp@spin.de>
 
+	* lib/Psh2/Builtins/Unshift.pm: New builtin for array handling
+
+	* lib/Psh2/Builtins/Push.pm: New builtin for array handling
+
 	* lib/Psh2.pm, lib/Psh2/Parser.pm, lib/Psh2/Language/Perl.pm, lib/Psh2/Builtins/Symbols.pm, lib/Psh2/Builtins/Sub.pm, lib/Psh2/Builtins/Package.pm: current_package is now a class member of Psh2
 
 	* lib/Psh2.pm, lib/Psh2/Parser.pm: Variable support extended
